roles/echoserver/files/echoserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: echoserver
  name: echoserver
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: echoserver
  type: ClusterIP
